# budget-planner

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
backend/: .coverage  Dockerfile  cloudbuild.yaml  pyproject.toml  requirements.txt  sql_app_test.db
backend/alembic/: env.py
backend/alembic/versions/: 5f016095eb36_added_budget_commit_on_user_creation.py  62c5e891adea_add_missing_budget_and_user_migrations.py  6677da8baf0f_add_missing_budget_and_user_migrations.py  8ace5a330a9e_initial_migration.py  a45b1af2a8ce_migration_to_fix_issues_with_creating_.py
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/models/: __init__.py  budget.py  category.py  expense.py  income.py  user.py
backend/app/routers/: budgets.py  categories.py  expenses.py  incomes.py  users.py
backend/app/schemas/: __init__.py  budget.py  category.py  expense.py  income.py  token.py  user.py
backend/app/seeders/: category.py
backend/app/services/: budget_calculator.py  budget_service.py  category_service.py  expense_service.py  income_service.py  jwt.py  user_service.py
backend/tests/: conftest.py  test_budget.py  test_income-expense.py  test_user.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/budget-frontend/: Dockerfile  package-lock.json  package.json
frontend/budget-frontend/src/: App.js
frontend/src/: App.js
frontend/src/components/: AddIncomeExpense.js  CustomSnackbar.js  Dashboard.js  (+4 more)
knowledgebase/: CLONE-PROJECT.md  DEPLOY-PROJECT.md
(+15 files in other folders)
